src/OpenCvSharpExtern/superres.h

CVAPI(int) superres_PyrLKOpticalFlow_getWindowSize(cv::superres::PyrLKOpticalFlow *obj) { return obj->getWindowSize(); }
CVAPI(void) superres_PyrLKOpticalFlow_setWindowSize(cv::superres::PyrLKOpticalFlow *obj, int val) { obj->setWindowSize(val); }
CVAPI(int) superres_PyrLKOpticalFlow_getMaxLevel(cv::superres::PyrLKOpticalFlow *obj) { return obj->getMaxLevel(); }
CVAPI(void) superres_PyrLKOpticalFlow_setMaxLevel(cv::superres::PyrLKOpticalFlow *obj, int val) { obj->setMaxLevel(val); }
CVAPI(int) superres_PyrLKOpticalFlow_getIterations(cv::superres::PyrLKOpticalFlow *obj) { return obj->getIterations(); }
CVAPI(void) superres_PyrLKOpticalFlow_setIterations(cv::superres::PyrLKOpticalFlow *obj, int val) { obj->setIterations(val); }